# dasoku

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_shaders.bat  destroy_shaders.bat  first_app.cpp  first_app.hpp  imgui.ini  main.cpp  simple_app.cpp  simple_app.hpp  simple_render_system.cpp  simple_render_system.hpp  zzz_device.cpp  zzz_device.hpp  zzz_game_object.hpp  zzz_model.cpp  zzz_model.hpp  zzz_pipeline.cpp  zzz_pipeline.hpp  zzz_renderer.cpp  zzz_renderer.hpp  zzz_swap_chain.cpp  zzz_swap_chain.hpp  zzz_window.cpp  zzz_window.hpp
Ashi (3D)/: Makefile  README.md  app.cpp  app.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  utils.hpp  window.cpp  window.hpp
Hebi (2D)/: Makefile  README.md  app.cpp  app.hpp  device.cpp  device.hpp  game_object.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
_dependencies/: README.md
resources/shaders/: diffuse_color.frag.spv  diffuse_color.vert.spv  simple.frag.spv  simple.vert.spv
resources/shaders/source/: diffuse_color.frag  diffuse_color.vert  simple.frag  simple.vert
shaders/: color.frag  color.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  test.frag  test.vert
shaders/2D/: simple_shader.frag  simple_shader.vert
shaders/3D/: simple_shader.frag  simple_shader.vert
source/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.cpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  utils.hpp  window.cpp  window.hpp
